# confluence-tool

./: LICENSE  README.md  tool.cabal
samples/: ground_example.trs
src/: Development.hs  Main.hs  Problem.hs  Task.hs  Types.hs
src/Confluence/: Type.hs  Types.hs
src/Confluence/Decompose/: Persistence.hs
src/Confluence/Direct/: Ground.hs  HuetToyamaOostrom.hs  KnuthBendix.hs
src/Framework/: Explain.hs  Types.hs
src/Rewriting/: Types.hs
src/Termination/: TTT2.hs  Types.hs
src/Util/: Functor2.hs  Pretty.hs  Relation.hs
