Name:          tool
Version:       0.0
Stability:     experimental
Author:        Bertram Felgenhauer

Build-Type:    Simple
Cabal-Version: >= 1.4
License:       MIT
License-File:  LICENSE

Executable tool
    Hs-Source-Dirs: src
    Main-is:        Main.hs

    Build-Depends:
        process >= 1.0 && < 1.1,
        array >= 0.3 && < 0.4,
        containers >= 0.3 && < 0.5,
        mtl >= 1.1 && < 2.1,
        ansi-wl-pprint >= 0.6 && < 0.7,
        term-rewriting >= 0.0 && < 0.1,
        base >= 4 && < 5

    Extensions:
        EmptyDataDecls
