Name:          tool
Version:       0.0
Synopsis:      A minimal confluence tool.
Stability:     experimental
Author:        Bertram Felgenhauer
Maintainer:    Bertram Felgenhauer <int-e@gmx.de>

Build-Type:    Simple
Cabal-Version: >= 1.4
License:       MIT
License-File:  LICENSE

Executable tool
    Hs-Source-Dirs: src
    Main-is:        Main.hs

    Build-Depends:
        process >= 1.0 && < 1.7,
        array >= 0.3 && < 0.6,
        containers >= 0.3 && < 0.8,
        mtl >= 1.1 && < 2.4,
        ansi-wl-pprint >= 0.6 && < 0.7,
        term-rewriting >= 0.5 && < 0.6,
        base >= 4 && < 5

    Extensions:
        EmptyDataDecls
